SFDCProject/src/objects/Related_Leads__c.object
<CustomObject>
    <description>This object stores the details of Leads and Opportunities that have the same Address / Email / Phone as the new lead.</description>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Leads (Duplicate Lead)</relationshipLabel>
        <relationshipName>Related_Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duplicate_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The duplicate Opportunity</description>
        <label>Duplicate Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>Related_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The duplicate lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Related Leads</relationshipLabel>
        <relationshipName>Related_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Lead / Opportunity Stage</description>
        <inlineHelpText>Lead / Opportunity Stage</inlineHelpText>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Lead/Opportunity Status</description>
        <inlineHelpText>Lead/Opportunity Status</inlineHelpText>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Related Leads</label>
    <nameField>
        <label>Duplicate Records  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>